Translate and make RTL

--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@ permalink: /404.html
 not_in_menu: true
 ---
 <article class="page" role="main">
-  <h2>404 &ndash; Not Found</h2>
+  <h2>404 &ndash; پیدا نشد</h2>
 
   <p>
-    The page you were looking for could not be found.
+    صفحه مورد نظر یافت نشد.
   </p>
   <p>
-    <a href="/">Take me back to the beginning.</a>
+  <a href="/">برو به صفحه اول</a>
   </p>
 </article>
