--- a/archive.html
+++ b/archive.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Archive of all meetups
+title: آرشیو تمام جلسات
 permalink: /archive/
 ---
 <article class="page" role="main">
-  <h1>All Meetups</h1>
+  <h1>تمام جلسات</h1>
 
   <ul class="event-list is-short">
     {% for event in site.posts %}
